Website/public/status/4_ce
Main.cpp: In function ‘int main()’:
Main.cpp:6:9: error: ‘a’ was not declared in this scope
  cin >> a >> b;
         ^
Main.cpp:6:14: error: ‘b’ was not declared in this scope
  cin >> a >> b;
              ^
